feat: secondary -> gray

--- a/stories/components/dataDisplay/Chip.stories.mdx
+++ b/stories/components/dataDisplay/Chip.stories.mdx
@@ -29,7 +29,7 @@ import Typography from "@/components/elements/core/typography/Typography";
         },
         color: {
             description: "Chip 색상",
-            defaultValue: "secondary",
+            defaultValue: "gray",
             control: {
                 type: "select",
                 options: ChipColors,
