fix: alert를 error로 수정

--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -93,7 +93,7 @@ export const Default = (args, { argTypes }) => ({
                     <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
-                    <Callout type='alert'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='success'>문구가 들어가는 자리입니다.</Callout>
@@ -161,7 +161,7 @@ export const Default = (args, { argTypes }) => ({
                     <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
-                    <Callout type='alert'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='success'>문구가 들어가는 자리입니다.</Callout>
