--- a/stories/components/message/Callout.stories.mdx
+++ b/stories/components/message/Callout.stories.mdx
@@ -39,6 +39,18 @@ import Icon from '@/components/elements/core/icon/Icon';
         type: "boolean"
       },
     },
+    paddings: {
+      description: "패딩",
+      table: {
+        type: {
+          summary: "Array",
+        },
+      },
+      control: {
+        type: "array",
+      },
+      defaultValue: null,
+    },
   }}
 />
 
@@ -55,6 +67,7 @@ export const Default = (args, { argTypes }) => ({
             v-if="showCallout"
             :type="type" :size="size"
             :full="full"
+            :paddings="paddings"
             :closable="closable"
             @closeCallout="showCallout = false"
         >
@@ -90,7 +103,7 @@ export const Default = (args, { argTypes }) => ({
         <div>
             <div style="margin-bottom: 10px">
                 <div>
-                    <Callout type='information'>문구가 들어가는 자리입니다.</Callout>
+                    <Callout type='information' :paddings='[0,0,0,0]'>문구가 들어가는 자리입니다.</Callout>
                 </div>
                 <div>
                     <Callout type='error'>문구가 들어가는 자리입니다.</Callout>
