--- a/stories/components/dataDisplay/Avatar.stories.mdx
+++ b/stories/components/dataDisplay/Avatar.stories.mdx
@@ -15,7 +15,7 @@ import Avatar, { avatarSizes, avatarTypes } from '@/components/components/dataDi
         },
         type: {
             description: "아바타 타입",
-            defaultValue: "text",
+            defaultValue: "mentee",
             control: {
                 type: "select",
                 options: avatarTypes,
@@ -74,10 +74,10 @@ export const Default = (args, { argTypes }) => ({
                   <Avatar type="text" size="medium" class="mr-24" />
                   <Avatar type="text" size="large" />
                   <hr class="mt-8 mb-8">
-                  <Avatar type="profile" size="xsmall" class="mr-24" />
-                  <Avatar type="profile" size="small" class="mr-24" />
-                  <Avatar type="profile" size="medium" class="mr-24" />
-                  <Avatar type="profile" size="large" />
+                  <Avatar type="mentee" size="xsmall" class="mr-24" />
+                  <Avatar type="mentee" size="small" class="mr-24" />
+                  <Avatar type="mentee" size="medium" class="mr-24" />
+                  <Avatar type="mentee" size="large" />
                   <hr class="mt-8 mb-8">
                   <Avatar type="logo" size="xsmall"  class="mr-24" />
                   <Avatar type="logo" size="small"  class="mr-24" />
