feat: type 이름 변경 text -> mentor

--- a/stories/components/dataDisplay/Avatar.stories.mdx
+++ b/stories/components/dataDisplay/Avatar.stories.mdx
@@ -69,10 +69,10 @@ export const Default = (args, { argTypes }) => ({
         {{
             template: `
                 <div>
-                  <Avatar type="text" size="xsmall" class="mr-24" />
-                  <Avatar type="text" size="small" class="mr-24" />
-                  <Avatar type="text" size="medium" class="mr-24" />
-                  <Avatar type="text" size="large" />
+                  <Avatar type="mentor" size="xsmall" class="mr-24" />
+                  <Avatar type="mentor" size="small" class="mr-24" />
+                  <Avatar type="mentor" size="medium" class="mr-24" />
+                  <Avatar type="mentor" size="large" />
                   <hr class="mt-8 mb-8">
                   <Avatar type="mentee" size="xsmall" class="mr-24" />
                   <Avatar type="mentee" size="small" class="mr-24" />
