--- a/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
+++ b/stories/components/dataDisplay/card/PromotionEduCard.stories.mdx
@@ -36,19 +36,14 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 		},
 		scoreAverage: {
 			description: '평점<br/>`Number`',
-			defaultValue: 0,
-			table: {
-				type: {
-					summary: null,
-				},
-			},
+			defaultValue: 4.8,
 			control: {
 				type: 'number',
 			},
 		},
 		reviewCount: {
 			description: '리뷰 수<br/>`Number`',
-			defaultValue: 0,
+			defaultValue: 34,
 			table: {
 				type: {
 					summary: null,
@@ -60,7 +55,7 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 		},
 		applicantCount: {
 			description: '수강생 수<br/>`Number`',
-			defaultValue: 0,
+			defaultValue: 50,
 			table: {
 				type: {
 					summary: null,
@@ -76,7 +71,7 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 			table: {
 				type: {
 					category: 'slots',
-					summary: 'HTMLElement',
+					summary: 'Component',
 				},
 			},
 		},
@@ -86,7 +81,7 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 			table: {
 				type: {
 					category: 'slots',
-					summary: 'HTMLElement',
+					summary: 'Component',
 				},
 			},
 		},
@@ -96,7 +91,7 @@ import Chip from '@/components/components/dataDisplay/chips/Chip';
 			table: {
 				type: {
 					category: 'slots',
-					summary: 'HTMLElement',
+					summary: 'Component',
 				},
 			},
 		},
