feat: mentee type icon color props 추가

--- a/stories/components/dataDisplay/Avatar.stories.mdx
+++ b/stories/components/dataDisplay/Avatar.stories.mdx
@@ -47,7 +47,7 @@ export const Default = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { Avatar },
     template:
-        `<Avatar :type="type" :src="src" :size="size" :text="text" />`,
+        `<Avatar :type="type" :src="src" :size="size" :text="text" :color="color" />`,
 });
 
 # Avatar
